--- a/DataClean.ipynb
+++ b/DataClean.ipynb
@@ -659,9 +659,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "temp = []\n",
+    "tempx = []\n",
+    "tempy = []\n",
+    "tempz = []\n",
+    "xy = []\n",
+    "yz = []\n",
+    "xz = []\n",
+    "for i in range(len(df)):\n",
+    "    temp = df.iloc[i,2]\n",
+    "    \n",
+    "    for j in range(len(temp)):\n",
+    "        tempx.append(temp[j][0])\n",
+    "        tempy.append(temp[j][1])\n",
+    "        tempz.append(temp[j][2])\n",
+    "    x = np.array(tempx)\n",
+    "    y = np.array(tempy)\n",
+    "    z = np.array(tempz)\n",
+    "    \n",
+    "    xy.append(np.mean(x * y))\n",
+    "    yz.append(np.mean(y * z))\n",
+    "    xz.append(np.mean(x * z))\n",
+    "    tempx = []\n",
+    "    tempy = []\n",
+    "    tempz = []\n",
+    "\n",
+    "df.insert(32, \"xy mean\", xy)\n",
+    "df.insert(33, \"yz mean\", yz)\n",
+    "df.insert(34, \"xz mean\", xz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -683,9 +722,6 @@
        "      <th>kurtosis</th>\n",
        "      <th>mean</th>\n",
        "      <th>...</th>\n",
-       "      <th>z median</th>\n",
-       "      <th>x skew</th>\n",
-       "      <th>y skew</th>\n",
        "      <th>z skew</th>\n",
        "      <th>x kurtosis</th>\n",
        "      <th>y kurtosis</th>\n",
@@ -693,6 +729,9 @@
        "      <th>x std</th>\n",
        "      <th>y std</th>\n",
        "      <th>z std</th>\n",
+       "      <th>xy mean</th>\n",
+       "      <th>yz mean</th>\n",
+       "      <th>xz mean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -709,9 +748,6 @@
        "      <td>4.308712</td>\n",
        "      <td>10.103423</td>\n",
        "      <td>...</td>\n",
-       "      <td>-1.6</td>\n",
-       "      <td>-0.281683</td>\n",
-       "      <td>-0.115287</td>\n",
        "      <td>-0.958296</td>\n",
        "      <td>4.834692</td>\n",
        "      <td>4.085765</td>\n",
@@ -719,6 +755,9 @@
        "      <td>1.204284</td>\n",
        "      <td>1.099321</td>\n",
        "      <td>0.682528</td>\n",
+       "      <td>-5.076834</td>\n",
+       "      <td>-0.512111</td>\n",
+       "      <td>16.161558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -733,9 +772,6 @@
        "      <td>0.369980</td>\n",
        "      <td>10.294204</td>\n",
        "      <td>...</td>\n",
-       "      <td>-1.9</td>\n",
-       "      <td>-1.143094</td>\n",
-       "      <td>0.076080</td>\n",
        "      <td>-0.456637</td>\n",
        "      <td>1.420196</td>\n",
        "      <td>1.369993</td>\n",
@@ -743,6 +779,9 @@
        "      <td>2.404669</td>\n",
        "      <td>2.229920</td>\n",
        "      <td>1.796619</td>\n",
+       "      <td>-3.229899</td>\n",
+       "      <td>-0.526181</td>\n",
+       "      <td>23.154322</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -757,9 +796,6 @@
        "      <td>3.243430</td>\n",
        "      <td>10.325923</td>\n",
        "      <td>...</td>\n",
-       "      <td>-1.9</td>\n",
-       "      <td>-1.169397</td>\n",
-       "      <td>0.660472</td>\n",
        "      <td>-1.361813</td>\n",
        "      <td>1.634786</td>\n",
        "      <td>0.683003</td>\n",
@@ -767,6 +803,9 @@
        "      <td>2.649007</td>\n",
        "      <td>2.882193</td>\n",
        "      <td>2.197824</td>\n",
+       "      <td>-3.538241</td>\n",
+       "      <td>-1.346332</td>\n",
+       "      <td>25.069799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -781,9 +820,6 @@
        "      <td>1.202015</td>\n",
        "      <td>10.695082</td>\n",
        "      <td>...</td>\n",
-       "      <td>-2.2</td>\n",
-       "      <td>-1.385162</td>\n",
-       "      <td>-0.753958</td>\n",
        "      <td>-0.832902</td>\n",
        "      <td>2.479632</td>\n",
        "      <td>1.038908</td>\n",
@@ -791,6 +827,9 @@
        "      <td>2.830061</td>\n",
        "      <td>2.743193</td>\n",
        "      <td>2.133902</td>\n",
+       "      <td>-3.714523</td>\n",
+       "      <td>-0.479246</td>\n",
+       "      <td>24.624523</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -805,9 +844,6 @@
        "      <td>6.854679</td>\n",
        "      <td>10.447635</td>\n",
        "      <td>...</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>-1.572159</td>\n",
-       "      <td>-0.717104</td>\n",
        "      <td>-0.821070</td>\n",
        "      <td>3.959701</td>\n",
        "      <td>1.671694</td>\n",
@@ -815,10 +851,13 @@
        "      <td>2.539729</td>\n",
        "      <td>2.612113</td>\n",
        "      <td>1.971313</td>\n",
+       "      <td>3.635025</td>\n",
+       "      <td>1.940151</td>\n",
+       "      <td>27.191206</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 32 columns</p>\n",
+       "<p>5 rows × 35 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -836,31 +875,31 @@
        "3  [7.299315036357863, 7.299315036357863, 7.29931...  20.592474  6.953416   \n",
        "4  [8.179242018671413, 8.275868534480233, 8.27586...  22.588935  7.097183   \n",
        "\n",
-       "        std      skew  kurtosis       mean    ...     z median    x skew  \\\n",
-       "0  1.153909  0.765104  4.308712  10.103423    ...         -1.6 -0.281683   \n",
-       "1  2.539697  0.793941  0.369980  10.294204    ...         -1.9 -1.143094   \n",
-       "2  2.980663  1.883973  3.243430  10.325923    ...         -1.9 -1.169397   \n",
-       "3  3.096813  1.265939  1.202015  10.695082    ...         -2.2 -1.385162   \n",
-       "4  2.874046  2.321100  6.854679  10.447635    ...         -2.0 -1.572159   \n",
+       "        std      skew  kurtosis       mean    ...        z skew  x kurtosis  \\\n",
+       "0  1.153909  0.765104  4.308712  10.103423    ...     -0.958296    4.834692   \n",
+       "1  2.539697  0.793941  0.369980  10.294204    ...     -0.456637    1.420196   \n",
+       "2  2.980663  1.883973  3.243430  10.325923    ...     -1.361813    1.634786   \n",
+       "3  3.096813  1.265939  1.202015  10.695082    ...     -0.832902    2.479632   \n",
+       "4  2.874046  2.321100  6.854679  10.447635    ...     -0.821070    3.959701   \n",
        "\n",
-       "     y skew    z skew  x kurtosis  y kurtosis  z kurtosis     x std     y std  \\\n",
-       "0 -0.115287 -0.958296    4.834692    4.085765    1.460693  1.204284  1.099321   \n",
-       "1  0.076080 -0.456637    1.420196    1.369993   -0.315002  2.404669  2.229920   \n",
-       "2  0.660472 -1.361813    1.634786    0.683003    2.046856  2.649007  2.882193   \n",
-       "3 -0.753958 -0.832902    2.479632    1.038908    0.454232  2.830061  2.743193   \n",
-       "4 -0.717104 -0.821070    3.959701    1.671694    0.469151  2.539729  2.612113   \n",
+       "   y kurtosis  z kurtosis     x std     y std     z std   xy mean   yz mean  \\\n",
+       "0    4.085765    1.460693  1.204284  1.099321  0.682528 -5.076834 -0.512111   \n",
+       "1    1.369993   -0.315002  2.404669  2.229920  1.796619 -3.229899 -0.526181   \n",
+       "2    0.683003    2.046856  2.649007  2.882193  2.197824 -3.538241 -1.346332   \n",
+       "3    1.038908    0.454232  2.830061  2.743193  2.133902 -3.714523 -0.479246   \n",
+       "4    1.671694    0.469151  2.539729  2.612113  1.971313  3.635025  1.940151   \n",
        "\n",
-       "      z std  \n",
-       "0  0.682528  \n",
-       "1  1.796619  \n",
-       "2  2.197824  \n",
-       "3  2.133902  \n",
-       "4  1.971313  \n",
+       "     xz mean  \n",
+       "0  16.161558  \n",
+       "1  23.154322  \n",
+       "2  25.069799  \n",
+       "3  24.624523  \n",
+       "4  27.191206  \n",
        "\n",
-       "[5 rows x 32 columns]"
+       "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -879,12 +918,21 @@
    "source": [
     "df.to_csv('SimTodActData.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -898,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   },
   "nbpresent": {
    "slides": {
