cross subject val
added cross subejct wise cross validation with grid search
implamentation

--- a/DataClean.ipynb
+++ b/DataClean.ipynb
@@ -52,7 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "giaWalking = pd.read_csv(\"Gia Walking.csv\", header = None, skiprows = 2)\n",
+    "giaWalking = pd.read_csv(\"Gia Walking Hopefully.csv\", header = None, skiprows = 2)\n",
     "giaRunning = pd.read_csv(\"Gia Running.csv\", header = None, skiprows = 2)\n",
     "giaSitting = pd.read_csv(\"Gia Sitting.csv\", header = None, skiprows = 2)\n",
     "giaSleeping = pd.read_csv(\"Gia Sleeping.csv\", header = None, skiprows = 2)\n",
@@ -91,7 +91,13 @@
     "davidSitting = pd.read_csv(\"David Sitting.csv\", header = None, skiprows = 2)\n",
     "davidSleeping = pd.read_csv(\"David Sleeping.csv\", header = None, skiprows = 2)\n",
     "davidStanding = pd.read_csv(\"David Standing.csv\", header = None, skiprows = 2)\n",
-    "davidClimbing = pd.read_csv(\"David Climbing.csv\", header = None, skiprows = 2)"
+    "davidClimbing = pd.read_csv(\"David Climbing.csv\", header = None, skiprows = 2)\n",
+    "juliaWalking = pd.read_csv(\"Julia Walking.csv\", header = None, skiprows = 2)\n",
+    "juliaRunning = pd.read_csv(\"Julia Running.csv\", header = None, skiprows = 2)\n",
+    "juliaSitting = pd.read_csv(\"Julia Sitting.csv\", header = None, skiprows = 2)\n",
+    "juliaSleeping = pd.read_csv(\"Julia Sleeping.csv\", header = None, skiprows = 2)\n",
+    "juliaStanding = pd.read_csv(\"Julia Standing.csv\", header = None, skiprows = 2)\n",
+    "juliaClimbing = pd.read_csv(\"Julia Climbing.csv\", header = None, skiprows = 2)"
    ]
   },
   {
@@ -102,18 +108,13 @@
    },
    "outputs": [],
    "source": [
-    "juliaWalking = pd.read_csv(\"Julia Walking.csv\", header = None, skiprows = 2)\n",
-    "juliaRunning = pd.read_csv(\"Julia Running.csv\", header = None, skiprows = 2)\n",
-    "juliaSitting = pd.read_csv(\"Julia Sitting.csv\", header = None, skiprows = 2)\n",
-    "juliaSleeping = pd.read_csv(\"Julia Sleeping.csv\", header = None, skiprows = 2)\n",
-    "juliaStanding = pd.read_csv(\"Julia Standing.csv\", header = None, skiprows = 2)\n",
-    "juliaClimbing = pd.read_csv(\"Julia Climbing.csv\", header = None, skiprows = 2)\n",
-    "roshneeWalking = pd.read_csv(\"Roshnee Walking.csv\", header = None, skiprows = 2)\n",
-    "roshneeRunning = pd.read_csv(\"Roshnee Running.csv\", header = None, skiprows = 2)\n",
-    "roshneeSitting = pd.read_csv(\"Roshnee Sitting.csv\", header = None, skiprows = 2)\n",
-    "roshneeSleeping = pd.read_csv(\"Roshnee Sleeping.csv\", header = None, skiprows = 2)\n",
-    "roshneeStanding = pd.read_csv(\"Roshnee Standing.csv\", header = None, skiprows = 2)\n",
-    "roshneeClimbing = pd.read_csv(\"Roshnee Climbing.csv\", header = None, skiprows = 2)"
+    "\n",
+    "#roshneeWalking = pd.read_csv(\"Roshnee Walking.csv\", header = None, skiprows = 2)\n",
+    "#roshneeRunning = pd.read_csv(\"Roshnee Running.csv\", header = None, skiprows = 2)\n",
+    "#roshneeSitting = pd.read_csv(\"Roshnee Sitting.csv\", header = None, skiprows = 2)\n",
+    "#roshneeSleeping = pd.read_csv(\"Roshnee Sleeping.csv\", header = None, skiprows = 2)\n",
+    "#roshneeStanding = pd.read_csv(\"Roshnee Standing.csv\", header = None, skiprows = 2)\n",
+    "#roshneeClimbing = pd.read_csv(\"Roshnee Climbing.csv\", header = None, skiprows = 2)"
    ]
   },
   {
@@ -134,9 +135,9 @@
     "    array = []\n",
     "    d = []\n",
     "    for index, row in data.iterrows():\n",
-    "        if (data.iloc[index,0] %2 != 0):\n",
+    "        if (data.iloc[index,0] % 5 != 0):\n",
     "            array.append([data.iloc[index,1],data.iloc[index,2],data.iloc[index,3]])\n",
-    "        elif (data.iloc[index,0] % 2 == 0):\n",
+    "        elif (data.iloc[index,0] % 5 == 0):\n",
     "            d.append([sub , act, array])\n",
     "            array = []\n",
     "            i+=1\n",
@@ -194,30 +195,31 @@
     "df = df.append(createDF(\"david\", \"sleeping\", davidSleeping), ignore_index=True)\n",
     "df = df.append(createDF(\"david\", \"climbing\", davidClimbing), ignore_index=True)\n",
     "df = df.append(createDF(\"david\", \"sitting\", davidSitting), ignore_index=True)\n",
-    "df = df.append(createDF(\"david\", \"standing\", davidStanding), ignore_index=True)"
+    "df = df.append(createDF(\"david\", \"standing\", davidStanding), ignore_index=True)\n",
+    "\n",
+    "df = df.append(createDF(\"julia\", \"walking\", juliaWalking), ignore_index=True)\n",
+    "df = df.append(createDF(\"julia\", \"running\", juliaRunning), ignore_index=True)\n",
+    "df = df.append(createDF(\"julia\", \"sleeping\", juliaSleeping), ignore_index=True)\n",
+    "df = df.append(createDF(\"julia\", \"climbing\", juliaClimbing), ignore_index=True)\n",
+    "df = df.append(createDF(\"julia\", \"sitting\", juliaSitting), ignore_index=True)\n",
+    "df = df.append(createDF(\"julia\", \"standing\", juliaStanding), ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df = df.append(createDF(\"julia\", \"walking\", juliaWalking), ignore_index=True)\n",
-    "df = df.append(createDF(\"julia\", \"running\", juliaRunning), ignore_index=True)\n",
-    "df = df.append(createDF(\"julia\", \"sleeping\", juliaSleeping), ignore_index=True)\n",
-    "df = df.append(createDF(\"julia\", \"climbing\", juliaClimbing), ignore_index=True)\n",
-    "df = df.append(createDF(\"julia\", \"sitting\", juliaSitting), ignore_index=True)\n",
-    "df = df.append(createDF(\"julia\", \"standing\", juliaStanding), ignore_index=True)\n",
     "\n",
-    "df = df.append(createDF(\"roshnee\", \"walking\", roshneeWalking), ignore_index=True)\n",
-    "df = df.append(createDF(\"roshnee\", \"running\", roshneeRunning), ignore_index=True)\n",
-    "df = df.append(createDF(\"roshnee\", \"sleeping\", roshneeSleeping), ignore_index=True)\n",
-    "df = df.append(createDF(\"roshnee\", \"climbing\", roshneeClimbing), ignore_index=True)\n",
-    "df = df.append(createDF(\"roshnee\", \"sitting\", roshneeSitting), ignore_index=True)\n",
-    "df = df.append(createDF(\"roshnee\", \"standing\", roshneeStanding), ignore_index=True)"
+    "#df = df.append(createDF(\"roshnee\", \"walking\", roshneeWalking), ignore_index=True)\n",
+    "#df = df.append(createDF(\"roshnee\", \"running\", roshneeRunning), ignore_index=True)\n",
+    "#df = df.append(createDF(\"roshnee\", \"sleeping\", roshneeSleeping), ignore_index=True)\n",
+    "#df = df.append(createDF(\"roshnee\", \"climbing\", roshneeClimbing), ignore_index=True)\n",
+    "#df = df.append(createDF(\"roshnee\", \"sitting\", roshneeSitting), ignore_index=True)\n",
+    "#df = df.append(createDF(\"roshnee\", \"standing\", roshneeStanding), ignore_index=True)"
    ]
   },
   {
@@ -659,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -697,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -741,176 +743,60 @@
        "      <td>walking</td>\n",
        "      <td>[[-9.8, 0.3, -1.5], [-9.8, 0.3, -1.5], [-9.8, ...</td>\n",
        "      <td>[9.918669265581952, 9.918669265581952, 9.91866...</td>\n",
-       "      <td>14.342245</td>\n",
-       "      <td>7.056203</td>\n",
-       "      <td>1.153909</td>\n",
-       "      <td>0.765104</td>\n",
-       "      <td>4.308712</td>\n",
-       "      <td>10.103423</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.958296</td>\n",
-       "      <td>4.834692</td>\n",
-       "      <td>4.085765</td>\n",
-       "      <td>1.460693</td>\n",
-       "      <td>1.204284</td>\n",
-       "      <td>1.099321</td>\n",
-       "      <td>0.682528</td>\n",
-       "      <td>-5.076834</td>\n",
-       "      <td>-0.512111</td>\n",
-       "      <td>16.161558</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>gia</td>\n",
-       "      <td>walking</td>\n",
-       "      <td>[[-10.9, 0.2, -1.2], [-9.9, -0.7, -2.1], [-9.9...</td>\n",
-       "      <td>[10.96767979109529, 10.144456614328833, 10.144...</td>\n",
-       "      <td>17.623564</td>\n",
+       "      <td>19.460987</td>\n",
        "      <td>5.989157</td>\n",
-       "      <td>2.539697</td>\n",
-       "      <td>0.793941</td>\n",
-       "      <td>0.369980</td>\n",
-       "      <td>10.294204</td>\n",
+       "      <td>2.138958</td>\n",
+       "      <td>1.445576</td>\n",
+       "      <td>3.793923</td>\n",
+       "      <td>10.182836</td>\n",
        "      <td>...</td>\n",
-       "      <td>-0.456637</td>\n",
-       "      <td>1.420196</td>\n",
-       "      <td>1.369993</td>\n",
-       "      <td>-0.315002</td>\n",
-       "      <td>2.404669</td>\n",
-       "      <td>2.229920</td>\n",
-       "      <td>1.796619</td>\n",
-       "      <td>-3.229899</td>\n",
-       "      <td>-0.526181</td>\n",
-       "      <td>23.154322</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>gia</td>\n",
-       "      <td>walking</td>\n",
-       "      <td>[[-8.5, -4.4, -3.5], [-8.5, -4.4, -3.5], [-8.5...</td>\n",
-       "      <td>[10.191172650877817, 10.191172650877817, 10.19...</td>\n",
-       "      <td>19.783074</td>\n",
-       "      <td>7.156815</td>\n",
-       "      <td>2.980663</td>\n",
-       "      <td>1.883973</td>\n",
-       "      <td>3.243430</td>\n",
-       "      <td>10.325923</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.361813</td>\n",
-       "      <td>1.634786</td>\n",
-       "      <td>0.683003</td>\n",
-       "      <td>2.046856</td>\n",
-       "      <td>2.649007</td>\n",
-       "      <td>2.882193</td>\n",
-       "      <td>2.197824</td>\n",
-       "      <td>-3.538241</td>\n",
-       "      <td>-1.346332</td>\n",
-       "      <td>25.069799</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>gia</td>\n",
-       "      <td>walking</td>\n",
-       "      <td>[[-7.2, 0.0, -1.2], [-7.2, 0.0, -1.2], [-7.2, ...</td>\n",
-       "      <td>[7.299315036357863, 7.299315036357863, 7.29931...</td>\n",
-       "      <td>20.592474</td>\n",
-       "      <td>6.953416</td>\n",
-       "      <td>3.096813</td>\n",
-       "      <td>1.265939</td>\n",
-       "      <td>1.202015</td>\n",
-       "      <td>10.695082</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.832902</td>\n",
-       "      <td>2.479632</td>\n",
-       "      <td>1.038908</td>\n",
-       "      <td>0.454232</td>\n",
-       "      <td>2.830061</td>\n",
-       "      <td>2.743193</td>\n",
-       "      <td>2.133902</td>\n",
-       "      <td>-3.714523</td>\n",
-       "      <td>-0.479246</td>\n",
-       "      <td>24.624523</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>gia</td>\n",
-       "      <td>walking</td>\n",
-       "      <td>[[-7.3, 3.1, -2.0], [-6.3, 4.8, -2.4], [-6.3, ...</td>\n",
-       "      <td>[8.179242018671413, 8.275868534480233, 8.27586...</td>\n",
-       "      <td>22.588935</td>\n",
-       "      <td>7.097183</td>\n",
-       "      <td>2.874046</td>\n",
-       "      <td>2.321100</td>\n",
-       "      <td>6.854679</td>\n",
-       "      <td>10.447635</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.821070</td>\n",
-       "      <td>3.959701</td>\n",
-       "      <td>1.671694</td>\n",
-       "      <td>0.469151</td>\n",
-       "      <td>2.539729</td>\n",
-       "      <td>2.612113</td>\n",
-       "      <td>1.971313</td>\n",
-       "      <td>3.635025</td>\n",
-       "      <td>1.940151</td>\n",
-       "      <td>27.191206</td>\n",
+       "      <td>-1.627314</td>\n",
+       "      <td>2.253049</td>\n",
+       "      <td>2.302408</td>\n",
+       "      <td>4.502332</td>\n",
+       "      <td>1.999532</td>\n",
+       "      <td>1.984068</td>\n",
+       "      <td>1.626193</td>\n",
+       "      <td>-3.132645</td>\n",
+       "      <td>-0.631162</td>\n",
+       "      <td>20.94497</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 35 columns</p>\n",
+       "<p>1 rows × 35 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     0        1                                                  2  \\\n",
        "0  gia  walking  [[-9.8, 0.3, -1.5], [-9.8, 0.3, -1.5], [-9.8, ...   \n",
-       "1  gia  walking  [[-10.9, 0.2, -1.2], [-9.9, -0.7, -2.1], [-9.9...   \n",
-       "2  gia  walking  [[-8.5, -4.4, -3.5], [-8.5, -4.4, -3.5], [-8.5...   \n",
-       "3  gia  walking  [[-7.2, 0.0, -1.2], [-7.2, 0.0, -1.2], [-7.2, ...   \n",
-       "4  gia  walking  [[-7.3, 3.1, -2.0], [-6.3, 4.8, -2.4], [-6.3, ...   \n",
        "\n",
        "                                           magnitude        max       min  \\\n",
-       "0  [9.918669265581952, 9.918669265581952, 9.91866...  14.342245  7.056203   \n",
-       "1  [10.96767979109529, 10.144456614328833, 10.144...  17.623564  5.989157   \n",
-       "2  [10.191172650877817, 10.191172650877817, 10.19...  19.783074  7.156815   \n",
-       "3  [7.299315036357863, 7.299315036357863, 7.29931...  20.592474  6.953416   \n",
-       "4  [8.179242018671413, 8.275868534480233, 8.27586...  22.588935  7.097183   \n",
+       "0  [9.918669265581952, 9.918669265581952, 9.91866...  19.460987  5.989157   \n",
        "\n",
-       "        std      skew  kurtosis       mean    ...        z skew  x kurtosis  \\\n",
-       "0  1.153909  0.765104  4.308712  10.103423    ...     -0.958296    4.834692   \n",
-       "1  2.539697  0.793941  0.369980  10.294204    ...     -0.456637    1.420196   \n",
-       "2  2.980663  1.883973  3.243430  10.325923    ...     -1.361813    1.634786   \n",
-       "3  3.096813  1.265939  1.202015  10.695082    ...     -0.832902    2.479632   \n",
-       "4  2.874046  2.321100  6.854679  10.447635    ...     -0.821070    3.959701   \n",
+       "        std      skew  kurtosis       mean    ...       z skew  x kurtosis  \\\n",
+       "0  2.138958  1.445576  3.793923  10.182836    ...    -1.627314    2.253049   \n",
        "\n",
        "   y kurtosis  z kurtosis     x std     y std     z std   xy mean   yz mean  \\\n",
-       "0    4.085765    1.460693  1.204284  1.099321  0.682528 -5.076834 -0.512111   \n",
-       "1    1.369993   -0.315002  2.404669  2.229920  1.796619 -3.229899 -0.526181   \n",
-       "2    0.683003    2.046856  2.649007  2.882193  2.197824 -3.538241 -1.346332   \n",
-       "3    1.038908    0.454232  2.830061  2.743193  2.133902 -3.714523 -0.479246   \n",
-       "4    1.671694    0.469151  2.539729  2.612113  1.971313  3.635025  1.940151   \n",
+       "0    2.302408    4.502332  1.999532  1.984068  1.626193 -3.132645 -0.631162   \n",
        "\n",
-       "     xz mean  \n",
-       "0  16.161558  \n",
-       "1  23.154322  \n",
-       "2  25.069799  \n",
-       "3  24.624523  \n",
-       "4  27.191206  \n",
+       "    xz mean  \n",
+       "0  20.94497  \n",
        "\n",
-       "[5 rows x 35 columns]"
+       "[1 rows x 35 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
