--- a/DataClean.ipynb
+++ b/DataClean.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "nbpresent": {
@@ -31,19 +31,12 @@
     "from io import StringIO\n",
     "import math\n",
     "import scipy.stats.stats as stats\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import metrics\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import f1_score\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "nbpresent": {
@@ -110,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "nbpresent": {
@@ -137,14 +130,14 @@
     "    d.pop(-1)\n",
     "    \n",
     "\n",
-    "    dftest = pd.DataFrame(d)\n",
+    "    df = pd.DataFrame(d)\n",
     "    \n",
-    "    return dftest"
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "nbpresent": {
@@ -219,7 +212,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-9.8, 0.3, -1.5], [-9.8, 0.3, -1.5], [-9.8, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-10.2, -5.6, -6.9], [-10.2, -5.6, -6.9], [-9...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-11.1, 0.9, -1.5], [-9.6, 0.2, -1.3], [-9.6,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-9.2, 0.8, -2.1], [-8.8, 0.6, -1.9], [-8.8, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-8.1, -4.2, -4.6], [-8.1, -4.2, -4.6], [-8.1...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0        1                                                  2\n",
+       "0  gia  walking  [[-9.8, 0.3, -1.5], [-9.8, 0.3, -1.5], [-9.8, ...\n",
+       "1  gia  walking  [[-10.2, -5.6, -6.9], [-10.2, -5.6, -6.9], [-9...\n",
+       "2  gia  walking  [[-11.1, 0.9, -1.5], [-9.6, 0.2, -1.3], [-9.6,...\n",
+       "3  gia  walking  [[-9.2, 0.8, -2.1], [-8.8, 0.6, -1.9], [-8.8, ...\n",
+       "4  gia  walking  [[-8.1, -4.2, -4.6], [-8.1, -4.2, -4.6], [-8.1..."
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-9.8, 0.3, -1.5], [-9.8, 0.3, -1.5], [-9.8, ...</td>\n",
+       "      <td>[-9.8, -9.8, -9.8, -9.8, -9.7, -9.7, -9.7, -9....</td>\n",
+       "      <td>[0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, ...</td>\n",
+       "      <td>[-1.5, -1.5, -1.5, -1.5, -1.4, -1.4, -1.4, -1....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-10.2, -5.6, -6.9], [-10.2, -5.6, -6.9], [-9...</td>\n",
+       "      <td>[-10.2, -10.2, -9.9, -9.9, -9.9, -9.9, -9.9, -...</td>\n",
+       "      <td>[-5.6, -5.6, 1.8, 1.8, 1.8, 1.8, 1.8, 8.2, 8.2...</td>\n",
+       "      <td>[-6.9, -6.9, -0.8, -0.8, -0.8, -0.8, -0.8, -2....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-11.1, 0.9, -1.5], [-9.6, 0.2, -1.3], [-9.6,...</td>\n",
+       "      <td>[-11.1, -9.6, -9.6, -9.6, -9.6, -8.5, -8.5, -8...</td>\n",
+       "      <td>[0.9, 0.2, 0.2, 0.2, 0.2, -2.4, -2.4, -2.4, -2...</td>\n",
+       "      <td>[-1.5, -1.3, -1.3, -1.3, -1.3, -1.2, -1.2, -1....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-9.2, 0.8, -2.1], [-8.8, 0.6, -1.9], [-8.8, ...</td>\n",
+       "      <td>[-9.2, -8.8, -8.8, -8.8, -8.8, -8.8, -8.9, -8....</td>\n",
+       "      <td>[0.8, 0.6, 0.6, 0.6, 0.6, 0.6, 0.1, 0.1, 0.1, ...</td>\n",
+       "      <td>[-2.1, -1.9, -1.9, -1.9, -1.9, -1.9, -2.7, -2....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-8.1, -4.2, -4.6], [-8.1, -4.2, -4.6], [-8.1...</td>\n",
+       "      <td>[-8.1, -8.1, -8.1, -12.0, -12.0, -12.0, -12.0,...</td>\n",
+       "      <td>[-4.2, -4.2, -4.2, -4.3, -4.3, -4.3, -4.3, 1.8...</td>\n",
+       "      <td>[-4.6, -4.6, -4.6, -3.8, -3.8, -3.8, -3.8, -5....</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0        1                                                  2  \\\n",
+       "0  gia  walking  [[-9.8, 0.3, -1.5], [-9.8, 0.3, -1.5], [-9.8, ...   \n",
+       "1  gia  walking  [[-10.2, -5.6, -6.9], [-10.2, -5.6, -6.9], [-9...   \n",
+       "2  gia  walking  [[-11.1, 0.9, -1.5], [-9.6, 0.2, -1.3], [-9.6,...   \n",
+       "3  gia  walking  [[-9.2, 0.8, -2.1], [-8.8, 0.6, -1.9], [-8.8, ...   \n",
+       "4  gia  walking  [[-8.1, -4.2, -4.6], [-8.1, -4.2, -4.6], [-8.1...   \n",
+       "\n",
+       "                                                   x  \\\n",
+       "0  [-9.8, -9.8, -9.8, -9.8, -9.7, -9.7, -9.7, -9....   \n",
+       "1  [-10.2, -10.2, -9.9, -9.9, -9.9, -9.9, -9.9, -...   \n",
+       "2  [-11.1, -9.6, -9.6, -9.6, -9.6, -8.5, -8.5, -8...   \n",
+       "3  [-9.2, -8.8, -8.8, -8.8, -8.8, -8.8, -8.9, -8....   \n",
+       "4  [-8.1, -8.1, -8.1, -12.0, -12.0, -12.0, -12.0,...   \n",
+       "\n",
+       "                                                   y  \\\n",
+       "0  [0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, ...   \n",
+       "1  [-5.6, -5.6, 1.8, 1.8, 1.8, 1.8, 1.8, 8.2, 8.2...   \n",
+       "2  [0.9, 0.2, 0.2, 0.2, 0.2, -2.4, -2.4, -2.4, -2...   \n",
+       "3  [0.8, 0.6, 0.6, 0.6, 0.6, 0.6, 0.1, 0.1, 0.1, ...   \n",
+       "4  [-4.2, -4.2, -4.2, -4.3, -4.3, -4.3, -4.3, 1.8...   \n",
+       "\n",
+       "                                                   z  \n",
+       "0  [-1.5, -1.5, -1.5, -1.5, -1.4, -1.4, -1.4, -1....  \n",
+       "1  [-6.9, -6.9, -0.8, -0.8, -0.8, -0.8, -0.8, -2....  \n",
+       "2  [-1.5, -1.3, -1.3, -1.3, -1.3, -1.2, -1.2, -1....  \n",
+       "3  [-2.1, -1.9, -1.9, -1.9, -1.9, -1.9, -2.7, -2....  \n",
+       "4  [-4.6, -4.6, -4.6, -3.8, -3.8, -3.8, -3.8, -5....  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['x'] = df.apply(lambda row:  [i[0] for i in row[2]], axis = 1)\n",
+    "df['y'] = df.apply(lambda row:  [i[1] for i in row[2]], axis = 1)\n",
+    "df['z'] = df.apply(lambda row:  [i[2] for i in row[2]], axis = 1)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#print(df.apply(lambda row: np.sqrt(np.square(row['x'])), axis = 1))\n",
+    "#df['magnitude'] = df.apply(lambda row: math.sqrt(row[x] ** 2 + row[y] ** 2 + row[z] ** 2), axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {
     "collapsed": false,
     "nbpresent": {
@@ -245,7 +438,132 @@
     "       \n",
     "    a.append(mag)\n",
     "\n",
-    "df.insert(3, \"magnitude\", a)"
+    "df.insert(6, \"magnitude\", a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>magnitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-9.8, 0.3, -1.5], [-9.8, 0.3, -1.5], [-9.8, ...</td>\n",
+       "      <td>[-9.8, -9.8, -9.8, -9.8, -9.7, -9.7, -9.7, -9....</td>\n",
+       "      <td>[0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, ...</td>\n",
+       "      <td>[-1.5, -1.5, -1.5, -1.5, -1.4, -1.4, -1.4, -1....</td>\n",
+       "      <td>[9.918669265581952, 9.918669265581952, 9.91866...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-10.2, -5.6, -6.9], [-10.2, -5.6, -6.9], [-9...</td>\n",
+       "      <td>[-10.2, -10.2, -9.9, -9.9, -9.9, -9.9, -9.9, -...</td>\n",
+       "      <td>[-5.6, -5.6, 1.8, 1.8, 1.8, 1.8, 1.8, 8.2, 8.2...</td>\n",
+       "      <td>[-6.9, -6.9, -0.8, -0.8, -0.8, -0.8, -0.8, -2....</td>\n",
+       "      <td>[13.528118864054973, 13.528118864054973, 10.09...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-11.1, 0.9, -1.5], [-9.6, 0.2, -1.3], [-9.6,...</td>\n",
+       "      <td>[-11.1, -9.6, -9.6, -9.6, -9.6, -8.5, -8.5, -8...</td>\n",
+       "      <td>[0.9, 0.2, 0.2, 0.2, 0.2, -2.4, -2.4, -2.4, -2...</td>\n",
+       "      <td>[-1.5, -1.3, -1.3, -1.3, -1.3, -1.2, -1.2, -1....</td>\n",
+       "      <td>[11.236992480196825, 9.689685237405806, 9.6896...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-9.2, 0.8, -2.1], [-8.8, 0.6, -1.9], [-8.8, ...</td>\n",
+       "      <td>[-9.2, -8.8, -8.8, -8.8, -8.8, -8.8, -8.9, -8....</td>\n",
+       "      <td>[0.8, 0.6, 0.6, 0.6, 0.6, 0.6, 0.1, 0.1, 0.1, ...</td>\n",
+       "      <td>[-2.1, -1.9, -1.9, -1.9, -1.9, -1.9, -2.7, -2....</td>\n",
+       "      <td>[9.470480452437457, 9.022749026765624, 9.02274...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>gia</td>\n",
+       "      <td>walking</td>\n",
+       "      <td>[[-8.1, -4.2, -4.6], [-8.1, -4.2, -4.6], [-8.1...</td>\n",
+       "      <td>[-8.1, -8.1, -8.1, -12.0, -12.0, -12.0, -12.0,...</td>\n",
+       "      <td>[-4.2, -4.2, -4.2, -4.3, -4.3, -4.3, -4.3, 1.8...</td>\n",
+       "      <td>[-4.6, -4.6, -4.6, -3.8, -3.8, -3.8, -3.8, -5....</td>\n",
+       "      <td>[10.218121158021175, 10.218121158021175, 10.21...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0        1                                                  2  \\\n",
+       "0  gia  walking  [[-9.8, 0.3, -1.5], [-9.8, 0.3, -1.5], [-9.8, ...   \n",
+       "1  gia  walking  [[-10.2, -5.6, -6.9], [-10.2, -5.6, -6.9], [-9...   \n",
+       "2  gia  walking  [[-11.1, 0.9, -1.5], [-9.6, 0.2, -1.3], [-9.6,...   \n",
+       "3  gia  walking  [[-9.2, 0.8, -2.1], [-8.8, 0.6, -1.9], [-8.8, ...   \n",
+       "4  gia  walking  [[-8.1, -4.2, -4.6], [-8.1, -4.2, -4.6], [-8.1...   \n",
+       "\n",
+       "                                                   x  \\\n",
+       "0  [-9.8, -9.8, -9.8, -9.8, -9.7, -9.7, -9.7, -9....   \n",
+       "1  [-10.2, -10.2, -9.9, -9.9, -9.9, -9.9, -9.9, -...   \n",
+       "2  [-11.1, -9.6, -9.6, -9.6, -9.6, -8.5, -8.5, -8...   \n",
+       "3  [-9.2, -8.8, -8.8, -8.8, -8.8, -8.8, -8.9, -8....   \n",
+       "4  [-8.1, -8.1, -8.1, -12.0, -12.0, -12.0, -12.0,...   \n",
+       "\n",
+       "                                                   y  \\\n",
+       "0  [0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, ...   \n",
+       "1  [-5.6, -5.6, 1.8, 1.8, 1.8, 1.8, 1.8, 8.2, 8.2...   \n",
+       "2  [0.9, 0.2, 0.2, 0.2, 0.2, -2.4, -2.4, -2.4, -2...   \n",
+       "3  [0.8, 0.6, 0.6, 0.6, 0.6, 0.6, 0.1, 0.1, 0.1, ...   \n",
+       "4  [-4.2, -4.2, -4.2, -4.3, -4.3, -4.3, -4.3, 1.8...   \n",
+       "\n",
+       "                                                   z  \\\n",
+       "0  [-1.5, -1.5, -1.5, -1.5, -1.4, -1.4, -1.4, -1....   \n",
+       "1  [-6.9, -6.9, -0.8, -0.8, -0.8, -0.8, -0.8, -2....   \n",
+       "2  [-1.5, -1.3, -1.3, -1.3, -1.3, -1.2, -1.2, -1....   \n",
+       "3  [-2.1, -1.9, -1.9, -1.9, -1.9, -1.9, -2.7, -2....   \n",
+       "4  [-4.6, -4.6, -4.6, -3.8, -3.8, -3.8, -3.8, -5....   \n",
+       "\n",
+       "                                           magnitude  \n",
+       "0  [9.918669265581952, 9.918669265581952, 9.91866...  \n",
+       "1  [13.528118864054973, 13.528118864054973, 10.09...  \n",
+       "2  [11.236992480196825, 9.689685237405806, 9.6896...  \n",
+       "3  [9.470480452437457, 9.022749026765624, 9.02274...  \n",
+       "4  [10.218121158021175, 10.218121158021175, 10.21...  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -781,54 +1099,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "566\n",
-      "566\n",
-      "566\n"
-     ]
-    }
-   ],
-   "source": [
-    "temp = []\n",
-    "tempx = []\n",
-    "tempy = []\n",
-    "tempz = []\n",
-    "x = []\n",
-    "y = []\n",
-    "z = []\n",
-    "for i in range(len(df)):\n",
-    "    temp = df.iloc[i,2]\n",
-    "    \n",
-    "    for j in range(len(temp)):\n",
-    "        tempx.append(temp[j][0])\n",
-    "        tempy.append(temp[j][1])\n",
-    "        tempz.append(temp[j][2])\n",
-    "   \n",
-    "    \n",
-    "    x.append(tempx)\n",
-    "    y.append(tempy)\n",
-    "    z.append(tempz)\n",
-    "    tempx = []\n",
-    "    tempy = []\n",
-    "    tempz = []\n",
-    "print(len(x))\n",
-    "print(len(y))\n",
-    "print(len(z))\n",
-    "df.insert(3, \"x\", x)\n",
-    "df.insert(4, \"y\", y)\n",
-    "df.insert(5, \"z\", z)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {
     "collapsed": false
@@ -889,7 +1159,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "df['x noise min'] = df.apply(lambda row: min(row['x noise']), axis=1)\n",
     "df['y noise min'] = df.apply(lambda row: min(row['y noise']), axis=1) \n",
     "df['z noise min'] = df.apply(lambda row: min(row['z noise']), axis=1) "
@@ -985,15 +1254,6 @@
     "df['y fft median'] = df.apply(lambda row: np.median(abs(np.fft.fft(row['y']))), axis = 1)\n",
     "df['z fft median'] = df.apply(lambda row: np.median(abs(np.fft.fft(row['z']))), axis = 1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1102,15 +1362,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 93,
    "metadata": {
     "collapsed": false
@@ -1119,15 +1370,6 @@
    "source": [
     "df.to_csv('SimTodActData.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
